--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,18 @@
   "name": "web-claim-server",
   "version": "0.1.0",
   "description": "server for udp web application",
-  "main": "index.js",
+  "main": "web-claim.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Igor Gorodetskyy <igorgo16@gmail.com>",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "go-duration": "github:igorgo/go-duration",
+    "lodash": "^4.17.5",
+    "nconf": "^0.10.0",
+    "oracledb": "^2.1.2",
+    "restify": "^6.3.4",
+    "restify-errors": "^6.0.0"
+  }
 }
