--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "server for udp web application",
   "main": "web-claim.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node web-claims"
   },
   "author": "Igor Gorodetskyy <igorgo16@gmail.com>",
   "license": "Apache-2.0",
