--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Created by .ignore support plugin (hsz.mobi)
 /.idea/
-/client/node_modules/
 /server/node_modules/
 /server/package-lock.json
+/icon-font/node_modules/
+/icon-font/package-lock.json
+/client/package-lock.json
+/client/node_modules/
+/client/src/css/afs-icons.*
