--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "dev": "quasar dev"
   },
   "dependencies": {
-    "axios": "^0.17.1"
+    "axios": "^0.17.1",
+    "js-base64": "^2.4.3"
   },
   "devDependencies": {
     "babel-eslint": "8.2.1",
