--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "nconf": "^0.10.0",
     "oracledb": "^2.1.2",
     "restify": "^6.3.4",
-    "restify-errors": "^6.0.0"
+    "restify-errors": "^6.0.0",
+    "uniqid": "^4.1.1"
   }
 }
