--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "go-duration": "github:igorgo/go-duration",
     "lodash": "^4.17.5",
     "nconf": "^0.10.0",
+    "nodemailer": "^4.6.4",
     "oracledb": "^2.1.2",
     "restify": "^6.3.4",
     "restify-errors": "^6.0.0",
